examples/test/testpolicy12032.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12032
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key34: value47
      key18: value13
      key15: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value47
          key44: value27
      podSelector:
        matchLabels:
          key16: value45
          key4: value33
